fix: game card ghost effect issue & clear button z-index

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,5 +1,6 @@
 .game-list{
     padding: 0rem 5rem;
+    z-index: 0;
 
     h2{
         padding: 5rem 0rem;
